src/executorthread.h
@@ -85,9 +85,13 @@ public:
 
     void wake(ExTask &task);
 
+    // Changes this threads' current task to the specified task
+    void setCurrentTask(ExTask newTask);
+
     const std::string& getName() const { return name; }
 
-    const std::string getTaskName() const {
+    const std::string getTaskName() {
+        LockHolder lh(currentTaskMutex);
         if (currentTask) {
             return currentTask->getDescription();
         } else {
@@ -129,7 +133,10 @@ private:
     hrtime_t waketime; // set to the earliest
 
     hrtime_t taskStart;
+
+    Mutex currentTaskMutex; // Protects currentTask
     ExTask currentTask;
+
     task_type_t curTaskType;
 
     Mutex logMutex;
